# BT-AM

./: .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  Doxyfile  README.md  configure-computer.sh  configure-hercules.sh  configure-istorage.sh  format.sh  main-BT-AM.cpp  run-computer.sh  run-hercules.sh  run-istorage.sh
.github/workflows/: publish.yml
inputs/: Mg-hcp-circ-nanowire-R-20.dump  Mg-hcp-circ-nanowire-R-25.dump  Mg-hcp-cube-x17-x10-x10-finite.dump  Mg-hcp-cube-x17-x10-x10-periodic.dump  Mg-hcp-cube-x20-x15-x15-finite.dump  Mg-hcp-cube-x20-x15-x15-periodic.dump  Mg-hcp-cube-x3-x3-x3.dump  Mg-hcp-cube-x5-x5-x5.dump  Mg-hcp-nanowire.dump  Mg-hcp-sphere-R-20.dump  MgH2-rutile-cube-x5-x5-x5.dump  MgHx-hcp-circ-nanowire-R-30.dump  MgHx-hcp-hex-nanowire-R-25.dump  MgHx-hcp-sphere-R-20.dump
src/: Macros.hpp  Variables.hpp
src/ADP/: AlCu-ADP.cpp  AlCu-ADP.hpp  AlCu-mf-V-bulk.cpp  AlCu-mf-V-bulk.hpp  MgHx-ADP.cpp  MgHx-ADP.hpp  MgHx-mf-V-bulk.cpp  MgHx-mf-V-bulk.hpp
src/Atoms/: Atom.cpp  Atom.hpp  Ghosts.cpp  Ghosts.hpp  Neighbors.cpp  Neighbors.hpp  Topology.cpp  Topology.hpp
src/IO/: dump-input.cpp  dump-input.hpp  dump-output.cpp  dump-output.hpp  hdf5-io.cpp  hdf5-io.hpp  vtk-output.cpp  vtk-output.hpp
src/Mechanical-eqs/: Mechanical-Relaxation-bulk.cpp  Mechanical-Relaxation-bulk.hpp
src/Numerical/: Quadrature-Hermitian-3th.cpp  Quadrature-Hermitian-3th.hpp  Quadrature-Hermitian-5th.cpp  Quadrature-Hermitian-5th.hpp  Quadrature-Measure.cpp  Quadrature-Measure.hpp  Quadrature-Multipole.cpp  Quadrature-Multipole.hpp  cubic-spline.cpp  cubic-spline.hpp
src/Numerical/doc/Hermitian-quadrature/: biblio.bib  doc-Hermitian-quadrature.tex  hermite-3-degree-quadrature-gaussian.py  hermite-5-degree-quadrature-gaussian.py
src/Numerical/doc/Multipole-quadrature/: doc-Multipole-quadrature.tex
src/Numerical/doc/Splines/: doc-cubic-splines.tex
src/Periodic-Boundary/: boundary_conditions.cpp  boundary_conditions.hpp
